Fix some page display and add Favicon.ico.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>潛艇系統設定</title>
+<title>CPTC IPMS DEMO</title>
 <style>
     body { margin: 0; display: flex; flex-direction: column; height: 100vh; }
-    iframe { border: none; }
+    iframe { border: none;}
     #I1 { height: 50px; width: 100%; }
     .content { display: flex; flex: 1; }
-    #I2 { width: 220px; }
-    #I3 { flex: 1; }
+    #I2 { width: 30%; }
+    #I3 { flex: 1; width: 70%;}
 </style>
 </head>
 <body>
