--- a/marine_main.html
+++ b/marine_main.html
@@ -7,8 +7,8 @@
 <title>潛艇儀表板</title>
 <style>
     body { margin: 0; background-color: #1e1e1e; font-family: 'Microsoft JhengHei', sans-serif; }
-    .main { position: relative; width: 100%; height: 100vh; background: url('marine.png') no-repeat center center; background-size: contain; }
-    .btn { position: absolute; padding: 2px 5px; border: 1px solid; color: white; font-size: 1.2vw; cursor: pointer; background-color: transparent; text-align: center; line-height: 1.2;}
+    .main { position: absolute; width: 100%; height: 100vh; overflow: auto; }
+    .btn { position: absolute; min-width: 50px; display: inline-block; padding: 2px 5px; border: 1px solid; color: white; font-size: clamp(12px, 1.2vw, 16px); cursor: pointer; background-color: transparent; text-align: center; line-height: 1.2;}
     .green { border-color: #00ff00; }
     .green:hover {
         background-color: #00ff00; /* hover 時填滿綠色 */
@@ -22,18 +22,20 @@
 <body>
 <div class='main'>
     <!-- 按鈕定位，依比例放置 -->
-    <div class='btn green' style='top:51%; left:18%;' onclick="parent.document.getElementById('I3').src='shaft.html'">推進軸系</div>
-    <div class='btn green' style='top:53%; left:25%;'>主馬達</div>
-    <div class='btn green' style='top:53%; left:30%;'>主發電機</div>
-    <div class='btn green' style='top:57%; left:25%;'>主電力推進與控制系統</div>
-    <div class='btn green' style='top:54.5%; left:40%;'>主水櫃充<br>排水系統</div>
-    <div class='btn green' style='top:54.5%; left:47%;'>燃油運轉及<BR>補償系統</div>
-    <div class='btn green' style='top:43%; left:45%;'>排煙系統</div>
-    <div class='btn green' style='top:50%; left:55%;'>電力管理系統</div>
-    <div class='btn green' style='top:43%; left:55%;'>火災偵測警報系統</div>
-    <div class='btn green' style='top:43%; left:70%;'>潛艦救生救難<br>及求生系統</div>
-    <div class='btn yellow' style='top:57%; left:55%;' onclick="parent.document.getElementById('I3').src='battery_monitor.html'">電瓶監控系統</div>
-    <div class='btn green' style='top:57%; left:70%;'>主水櫃充排系統</div>
+    <div class='btn green' style='margin-top: 300px; margin-left: 100px;' onclick="window.location.href='shaft.html'">推進軸系</div>
+    <div class='btn green' style='margin-top: 320px; margin-left: 220px;'>主馬達</div>
+    <div class='btn green' style='margin-top: 320px; margin-left: 290px;'>主發電機</div>
+    <div class='btn green' style='margin-top: 350px; margin-left: 220px;'>主電力推進與控制系統</div>
+    <div class='btn green' style='margin-top: 335px; margin-left: 380px;'>主水櫃充<br>排水系統</div>
+    <div class='btn green' style='margin-top: 335px; margin-left: 450px;'>燃油運轉及<BR>補償系統</div>
+    <div class='btn green' style='margin-top: 250px; margin-left: 450px;'>排煙系統</div>
+    <div class='btn green' style='margin-top: 300px; margin-left: 550px;'>電力管理系統</div>
+    <div class='btn green' style='margin-top: 250px; margin-left: 550px;'>火災偵測警報系統</div>
+    <div class='btn green' style='margin-top: 250px; margin-left: 700px;'>潛艦救生救難<br>及求生系統</div>
+    <div class='btn yellow' style='margin-top: 350px; margin-left: 550px;' onclick="window.location.href='battery_monitor.html'">電瓶監控系統</div>
+    <div class='btn green' style='margin-top: 350px; margin-left: 700px;'>主水櫃充排系統</div>
+    <!-- 潛艇圖片 -->
+    <img src="marine.png" alt="潛艇圖">
 </div>
 </body>
 </html>
